# xuss-c

./: .gitignore  AGENTS.md  BEDSIDE.md  README.md  bedside.toml  parts.toml  requirements-dev.txt  silico.toml  spec.md
.github/workflows/: ci.yml
assets/: README.md  boot-riff.u8.raw
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_board.c  app_board.h  audio_board.c  audio_board.h  disp_board.c  disp_board.h  hal_board.c  hal_board.h  idf_component.yml  main.c  sensor_board.c  sensor_board.h
firmware/main/assets/: riff.pcm
host/: CMakeLists.txt  test_audio.c  test_config.c  test_defaults.c  test_edge.c  test_face.c  test_input.c  test_proto.c  test_protocol.c  test_ui.c
include/gcu/: audio.h  defaults.h  domain.h  face.h  font.h  hal.h  input.h  proto.h  ui.h  version.h
include/xuss/: config.h  edge.h  protocol.h
install/: README.md
src/: audio.c  config.c  defaults.c  domain.c  edge.c  face.c  input.c  proto.c  protocol.c  ui.c
tools/: make_audio_assets.py  make_font.py
